# SfsLargefile

./: CMakeLists.txt  README.md
doc/: dev.md
docker/scripts/: docker_build.sh  docker_into.sh  docker_run.sh  docker_stop_and_rm.sh
sfs/include/: common.h  file_op.h  index_handle.h  mmap_file.h  mmap_file_op.h
sfs/src/: CMakeLists.txt  file_op.cpp  index_handle.cpp  mmap_file.cpp  mmap_file_op.cpp
test/: CMakeLists.txt  block_delete_test.cpp  block_init_test.cpp  block_load_test.cpp  block_read_test.cpp  block_stat_test.cpp  block_write_test.cpp  file_op_test.cpp  mmap_file_op_test.cpp  mmap_file_test.cpp
